# better-genshin-impact-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/: repo-bot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: mirrorchyan_uploading.yml  publish.yml
Docs/: readme_en.md  readme_ja.md  readme_tcn.md  rust-migration.md
apps/desktop/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.svelte  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
crates/bgi-capture/: Cargo.toml
crates/bgi-capture/src/: lib.rs  platform_stub.rs  platform_windows.rs  platform_windows_capture.rs  platform_windows_metrics.rs  platform_windows_registry.rs  platform_windows_win32.rs  platform_windows_window.rs  tests.rs
crates/bgi-cli/: Cargo.toml
crates/bgi-cli/src/: commands.rs  commands_cli.rs  commands_core.rs  commands_notification.rs  commands_script.rs  commands_task.rs  commands_update.rs  main.rs  notification_commands.rs  script_commands.rs  script_execution_commands.rs  script_host_runtime_command.rs  script_repo_commands.rs  update_commands.rs
crates/bgi-core/: Cargo.toml
crates/bgi-core/src/: app_misc_configs.rs  assets.rs  capability.rs  config.rs  config_tests.rs  error.rs  hot_key_config.rs  key_bindings.rs  lib.rs  notification.rs  notification_delivery.rs  notification_delivery_feishu.rs  notification_delivery_helpers.rs  notification_delivery_requests.rs  notification_dispatch.rs  notification_events.rs  notification_model.rs  notification_model_clients.rs  notification_plans.rs  notification_tests.rs  overlay.rs  pathing.rs  pathing_execution.rs  pathing_io.rs  pathing_tests.rs  task_activity_configs.rs  task_configs.rs  task_configs_activity.rs  task_configs_boss.rs  task_configs_combat.rs  task_configs_common.rs  task_configs_domain.rs  task_configs_ley_line.rs  task_configs_misc.rs  trigger.rs  ui.rs  update.rs  update_redeem_code.rs  update_tests.rs
crates/bgi-hotkey/: Cargo.toml
crates/bgi-hotkey/src/: lib.rs
crates/bgi-input/: Cargo.toml
crates/bgi-input/src/: input_sequences.rs  input_sequences_dispatch.rs  input_sequences_input.rs  input_sequences_post_message.rs  lib.rs  platform_stub.rs  platform_windows.rs  tests.rs
crates/bgi-script/: Cargo.toml
crates/bgi-script-engine/: Cargo.toml
crates/bgi-script-engine/src/: group_execution.rs  group_execution_project.rs  group_execution_runner.rs  group_execution_steps.rs  lib.rs  model.rs  module_loader.rs  runtime_bindings.rs  runtime_bindings_descriptors.rs  runtime_bindings_descriptors_file.rs  runtime_bindings_descriptors_global.rs  runtime_bindings_descriptors_key_mouse_hook.rs  runtime_bindings_descriptors_simple_host_objects.rs  runtime_bindings_descriptors_simple_host_objects_dispatcher.rs  runtime_bindings_descriptors_simple_host_objects_genshin.rs  runtime_bindings_descriptors_simple_host_objects_html_mask.rs  runtime_bindings_descriptors_simple_host_objects_input.rs  runtime_bindings_descriptors_simple_host_objects_misc.rs  runtime_bindings_descriptors_simple_host_objects_notification.rs  runtime_bindings_descriptors_simple_host_objects_pathing.rs  runtime_bindings_descriptors_simple_host_objects_vision.rs  runtime_bindings_helpers.rs  runtime_bindings_promise.rs  runtime_constructors.rs  runtime_host_call.rs  tests.rs
crates/bgi-script/src/: execution_records.rs  execution_records_tests.rs  farming_plan.rs  farming_plan_tests.rs  group.rs  group_discovery.rs  group_model.rs  group_tests.rs  host.rs  host_catalog.rs  host_catalog_bindings.rs  host_catalog_members.rs  host_catalog_summary.rs  lib.rs  log_parse.rs  log_parse_tests.rs  macro.rs  macro_playback.rs  macro_tests.rs  manifest.rs  pathing_result.rs  pathing_result_tests.rs  pathing_skip.rs  pathing_skip_tests.rs  policy.rs  policy_error.rs  policy_file.rs  policy_http.rs  policy_notification.rs  policy_path.rs  policy_summary.rs  pre_execution.rs  pre_execution_tests.rs  project.rs  project_loader.rs  project_tests.rs  repo.rs  repo_bridge.rs  repo_bridge_file.rs  repo_bridge_index.rs  (+49 more)
crates/bgi-task/: Cargo.toml
crates/bgi-task/src/: auto_artifact_salvage.rs  auto_boss.rs  auto_cook.rs  auto_domain.rs  auto_eat.rs  auto_fight.rs  auto_fight_avatar_catalog.rs  auto_fight_detection_model.rs  auto_fight_execution_model.rs  auto_fight_finish_detection.rs  auto_fight_input.rs  auto_fight_input_events.rs  auto_fight_input_events_actions.rs  auto_fight_input_events_keys.rs  auto_fight_loop.rs  auto_fight_model.rs  auto_fight_playback.rs  auto_fight_script.rs  auto_fight_script_parser.rs  auto_fight_vision.rs  auto_fight_vision_finish.rs  auto_fight_vision_layout.rs  auto_fight_vision_pixels.rs  auto_fight_vision_skill.rs  auto_fight_vision_templates.rs  auto_fish.rs  auto_fishing_task.rs  auto_genius_invokation.rs  auto_ley_line_outcrop.rs  auto_music_game.rs  auto_open_chest.rs  auto_pathing.rs  auto_pick.rs  auto_skip.rs  auto_stygian_onslaught.rs  auto_track.rs  auto_track_path.rs  auto_wood.rs  catalog.rs  catalog_data.rs  (+43 more)
crates/bgi-vision/: Cargo.toml
crates/bgi-vision/src/: backend.rs  backend_image.rs  bv.rs  geometry.rs  grid.rs  grid_icon_classifier.rs  lib.rs  onnx.rs  recognition.rs  region.rs  tests.rs
