[workspace]
members = [
    "crates/bgi-core",
    "crates/bgi-script",
    "crates/bgi-script-engine",
    "crates/bgi-input",
    "crates/bgi-hotkey",
    "crates/bgi-capture",
    "crates/bgi-vision",
    "crates/bgi-task",
    "crates/bgi-cli",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
repository = "https://github.com/xutongxue233/better-genshin-impact-rust"
authors = ["BetterGI contributors"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
boa_engine = "0.19.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
json5 = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
md5 = { package = "md-5", version = "0.10" }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
specta = { version = "2.0.0-rc.22", features = ["derive"] }
tauri = { version = "=2.9.5", features = ["tray-icon"] }
tauri-build = "=2.5.6"
thiserror = "1.0"
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "native-tls"] }
walkdir = "2.5"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
    "Foundation",
    "UI_Notifications",
] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[patch.crates-io]
webview2-com-sys = { path = "third_party/webview2-com-sys-0.38.2" }
