[package]
name = "bgi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bgi-capture = { path = "../bgi-capture" }
bgi-hotkey = { path = "../bgi-hotkey" }
bgi-input = { path = "../bgi-input" }
bgi-script = { path = "../bgi-script" }
bgi-script-engine = { path = "../bgi-script-engine" }
bgi-task = { path = "../bgi-task" }
bgi-vision = { path = "../bgi-vision" }
bgi-core = { path = "../bgi-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
