[package]
name = "bgi-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
image.workspace = true
json5.workspace = true
md5.workspace = true
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir.workspace = true
