[package]
name = "bgi-script"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bgi-capture = { path = "../bgi-capture" }
bgi-core = { path = "../bgi-core" }
bgi-input = { path = "../bgi-input" }
bgi-task = { path = "../bgi-task" }
bgi-vision = { path = "../bgi-vision" }
json5.workspace = true
regex.workspace = true
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true
