[package]
name = "bgi-task"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bgi-core = { path = "../bgi-core" }
bgi-input = { path = "../bgi-input" }
bgi-vision = { path = "../bgi-vision" }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
