[package]
name = "bgi-vision"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
image.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
